--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="#news">News</a></li>
                 <li><a href="#facilities">Facilities</a></li>
                 <li><a href="#menu">Food Menu</a></li>
-                <li><a href="#" id="login-btn"><i class="fa-solid fa-user"></i>Login</a></li>
+                <li id="login-vertical"><a href="#" id="login-btn"><i class="fa-solid fa-user"></i>Login</a></li>
             </ul>
             <ul class="nav_links" id="nav-links-login">
                 <li><a href="#" id="login-btn"><i class="fa-solid fa-user"></i>Login</a></li>
