--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="input_group">
                     <label for="time">Reservation Time</label>
-                    <input type="text" id="res-time" placeholder="Your Reservation Time">
+                    <input type="text" id="res-time" placeholder="Your Reservation Time (hh:mm)">
                 </div>
                 <div class="input_group">
                     <label for="guests">Number of Guests</label>
@@ -484,7 +484,7 @@
                     <div class="submit-btn"><button class="btn" type="submit">Submit</button></div>
                 </form>
                 <p class="notice-text">*Please call us at the following number if you have any conenential questions: <a
-                        href="te:012345678">0123456789</a>. Thank you so much!</p>
+                        href="tel:012345678">0123456789</a>. Thank you so much!</p>
             </div>
 
         </div>
